--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
   <string name="home_dateForecastTomorrow">Tomorrow</string>
   <string name="home_currentIconDesc">Icon for current conditions.</string>
   <string name="home_humidityIconDesc">Icon for humidity.</string>
+  <string name="home_windIconDesc">Icon for wind.</string>
 
   <string name="home_error_retryButton">Try again</string>
   <string name="home_error_unknownLocation_title">Where are you?</string>
