--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
   <string name="home_humidityIconDesc">Icon for humidity.</string>
   <string name="home_wind">%1$d km/h</string>
   <string name="home_windIconDesc">Icon for wind.</string>
+  <string name="home_uvProtection">%1$s–%2$s</string>
   <string name="home_uvProtectionIconDesc">Icon for UV protection.</string>
 
   <string name="home_error_retryButton">Try again</string>
