Change continuation indent to 2 rather than 4

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,8 @@
   <string name="home_error_unknownLocation_title">Where are you?</string>
   <string name="home_error_unknownLocation_message">Sorry mate, this app provides forecasts for Australia only!</string>
   <string name="home_error_data_title">Something\'s wrong</string>
-  <string name="home_error_data_message">Looks like the Bureau of Meteorology is returning some unexpected data.</string>
+  <string
+      name="home_error_data_message">Looks like the Bureau of Meteorology is returning some unexpected data.</string>
   <string name="home_error_network_title">Network issues?</string>
   <string name="home_error_network_message">Looks like the Bureau of Meteorology is unreachable at the moment.</string>
   <string name="home_error_location_title">Can\'t locate you</string>
