--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
   <string name="home_windIconDesc">Icon for wind.</string>
   <string name="home_uvProtection">%1$s–%2$s</string>
   <string name="home_uvProtectionIconDesc">Icon for UV protection.</string>
+  <string name="home_rainRadarButton">Rain radar</string>
 
   <string name="home_error_retryButton">Try again</string>
   <string name="home_error_unknownLocation_title">Where are you?</string>
