Add a blank widget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,6 @@
   <string name="about_chrisWebsite">Chris\' website</string>
   <string name="about_bomWebsite">Bureau of Meteorology</string>
 
+  <string name="widgetDescription">Forecast from Socket Weather</string>
+
 </resources>
