Add column layout to widget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,6 @@
 
   <string name="widget_description">Forecast from Socket Weather</string>
   <string name="widget_feels">Feels %s</string>
+  <string name="widget_today">TODAY</string>
 
 </resources>
