Schedule background updates while widgets are placed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,7 @@
   <string name="widget_today">Today</string>
   <string name="widget_tomorrow">Tomorrow</string>
 
+  <string name="notification_name">Background sync</string>
+  <string name="notification_title">Updating weather forecast</string>
+
 </resources>
