--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,8 +68,8 @@
   <string name="about_bomWebsite">Bureau of Meteorology</string>
 
   <string name="widget_description">Forecast from Socket Weather</string>
-  <string name="widget_feels_short">Feels %s</string>
-  <string name="widget_feels_long">Feels like %s</string>
+  <string name="widget_feelsShort">Feels %s</string>
+  <string name="widget_feelsLong">Feels like %s</string>
   <string name="widget_today">Today</string>
   <string name="widget_tomorrow">Tomorrow</string>
 
