--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,14 +32,15 @@
   <string name="home_justUpdated">Updated just now</string>
   <string name="home_dateForecastTomorrow">Tomorrow</string>
   <string name="home_currentIconDesc">Icon for current conditions.</string>
-  <string name="home_humidityIconDesc">Icon for humidity.</string>
   <string name="home_wind">%1$d km/h</string>
-  <string name="home_windIconDesc">Icon for wind.</string>
   <string name="home_uvProtection">%1$s–%2$s</string>
-  <string name="home_uvProtectionIconDesc">Icon for UV protection.</string>
-  <string name="home_collapsedDescriptionOnClickLabel">Expand description.</string>
-  <string name="home_expandedDescriptionOnClickLabel">Collapse description.</string>
   <string name="home_rainRadarButton">Rain radar</string>
+  <string name="home_moreButton">More</string>
+  <string name="home_lessButton">Less</string>
+  <string name="home_rainChance">Chance of rain</string>
+  <string name="home_humidity">Humidity</string>
+  <string name="home_windSpeed">Wind speed</string>
+  <string name="home_uvWarningTimes">UV warning times</string>
 
   <string name="home_error_retryButton">Try again</string>
   <string name="home_error_unknownLocation_title">Where are you?</string>
