Add links to about screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,9 @@
   <string name="rainRadar_title">Rain radar</string>
 
   <string name="about_title">About</string>
-  <string name="about_body">This app was hand made in Melbourne by Chris Horner. It\'s still a little rough around the edges, but it should improve with time. Development was inspired by Shifty Jelly\'s late Pocket Weather.\n\nAll forecast data is provided by the Australian Bureau of Meteorology.\n\nThis app respects your privacy and doesn\'t harvest your data. It\'s also completely open source.</string>
+  <string name="about_body">This app was hand made in Melbourne by Chris Horner, along with some friendly contributors. Development was inspired by Shifty Jelly\'s late Pocket Weather.\n\nAll forecast data is provided by the Australian Bureau of Meteorology.\n\nThis app respects your privacy and doesn\'t harvest your data. It\'s also completely open source.</string>
+  <string name="about_contributorsLink">contributors</string>
+  <string name="about_pocketWeatherLink">Pocket Weather</string>
   <string name="about_source">Source on GitHub</string>
   <string name="about_chrisWebsite">Chris\' website</string>
   <string name="about_bomWebsite">Bureau of Meteorology</string>
